[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# Binary-only crate (no library)
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "bootloader"
path = "src/main.rs"

[dependencies]
riscv = "0.11"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true

