[package]
name = "user"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_lib"
path = "src/lib.rs"

[[bin]]
name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]
name = "power_3"
path = "src/bin/power_3.rs"

[[bin]]
name = "power_5"
path = "src/bin/power_5.rs"

[[bin]]
name = "power_7"
path = "src/bin/power_7.rs"

[[bin]]
name = "test_simple"
path = "src/bin/test_simple.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"

[dependencies]
